syntax="proto3";

import "google/protobuf/empty.proto";

package post;

service PostService {
    rpc CreatePost(PostRequest) returns (GetPostResponse) {}
    rpc GetPostById(IdRequest) returns (GetPostResponse) {}
    rpc GetPostByUserId(IdUser) returns (Posts) {}
    rpc GetPostForUser(IdUser) returns (Posts) {}
    rpc GetPostForComment(IdRequest) returns (GetPostResponse) {}
    rpc SearchByTitle(Title) returns (Posts) {}
    rpc LikePost(LikeRequest) returns (GetPostResponse) {}
    rpc UpdatePost(UpdatePostRequest) returns (google.protobuf.Empty) {}
    rpc DeletePost(IdRequest) returns (GetPostResponse) {}
}

message GetPostResponse {
    int64 id = 1;
    string title = 2;
    string description = 3;
    int64 likes = 4;
    repeated Comment comments = 5;
    string user_id = 6;
    string user_name = 7;
    string user_email = 8;
    string created_at = 9;
    string updated_at = 10;
}

message Comment {
    int64 post_id = 1;
    string post_title = 2;
    string user_id = 3;
    string user_name = 4;
    string post_user_name = 5;
    string text = 6;
    string created_at = 7;
}

message PostRequest {
    string title = 1;
    string description = 2;
    string user_id = 3;
}

message UpdatePostRequest {
    string title = 1;
    string description = 2;
    int64 id = 3;
}

message IdRequest {
    int64 id = 1;
}

message IdUser {
    string id = 1;
}

message Posts {
    repeated GetPostResponse posts = 1;
}

message Title {
    string title = 1;
}

message LikeRequest {
    int64 post_id = 1;
    bool is_liked = 2;
}